[package]
name = "tts"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = {version = "1.35.1", features = ["full"]}
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
messages = { path = "messages-rs", futures = ["tokio"]}
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1.14"
futures = "0.3.30"
futures-util = "0.3.30"
