[package]
name = "tts"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = {version = "1.35.1", features = ["rt-multi-thread"]}
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"]}
coerce = "0.8.11"
async-trait = "0.1.77"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.30"
